# toy-nuts-bayes

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
notebooks/: 01_results.ipynb  02_diagnostics.ipynb  03_calibration.ipynb
scripts/: make_plots.py  make_readme_figures.py  run_linear_gaussian.py
src/toynuts/: __init__.py  calibration.py  diagnostics.py  hamiltonian.py  integrators.py  io.py  plotting.py  sampler.py  trajectory.py  transforms.py  transition.py
src/toynuts/models/: __init__.py  base.py  linear_gaussian.py  multivariate_normal.py
tests/: test_calibration.py  test_diagnostics.py  test_integrators.py  test_linear_gaussian.py  test_trajectory.py  test_transforms.py
