[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toynuts"
version = "0.1.0"
description = "A from-scratch No-U-Turn Sampler in pure Python, validated against a conjugate Bayesian linear regression with a closed-form posterior"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "argmax-w" }]
keywords = ["nuts", "hmc", "mcmc", "bayesian", "diagnostics"]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "pyarrow>=14",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/toynuts"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "NPY", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
